--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>3D Flip Login And Registration Form - Easy Tutorials</title>
+    <title>3D Flip Login And Registration Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
